@@ -266,6 +266,14 @@ deps =
 commands =
     nosetests {posargs:--randomize passlib.tests.test_ext_django passlib.tests.test_handlers_django}
 
+[testenv:django18-py3]
+basepython = python3
+deps =
+    {[testenv]deps}
+    django<1.9
+commands =
+    nosetests {posargs:--randomize passlib.tests.test_ext_django passlib.tests.test_handlers_django}
+
 #---------------------------------------------------------------------
 # latest django version
 #---------------------------------------------------------------------
