@@ -15,8 +15,8 @@ Upcoming in **1.7**
     * **It will require Python 2.6 / 3.2 or newer;
       dropping support for Python 2.5, 3.0, 3.1**
 
-    * The :mod:`passlib.ext.django` extension will require Django 1.6 or newer;
-      dropping support for Django 1.5 and earlier.
+    * The :mod:`passlib.ext.django` extension will require Django 1.8 or newer;
+      dropping support for Django 1.7 and earlier.
 
     * New hashes generated by :class:`!HtpasswdFile` will use the strongest
       algorithm available on the host, rather than one that is guaranteed to be portable.
@@ -29,6 +29,9 @@ Upcoming in **1.7**
     * :class:`~passlib.CryptContext` instances now pass contextual keywords (such as `"user"`)
       to the hashes that support them, but ignores them for hashes that don't.  This should
       fix :issue:`63`.
+
+    * :mod:`passlib.ext.django` and unittests: compatibility fixes for Django 1.9,
+      and some internal cleanups (fixes :issue:`68`).
 
 **1.6.5** (2015-08-04)
 ======================
